--- a/src/App.css
+++ b/src/App.css
@@ -17,25 +17,33 @@ body {
 #root,
 .App {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   position: relative;
 }
 
-/* Custom Scrollbar */
+.App {
+  display: flex;
+  flex-direction: column;
+  background-color: #000;
+}
 
-/* width */
+/* Main content area */
+main {
+  flex: 1;
+  padding: 20px;
+}
+
+/* Custom Scrollbar */
 ::-webkit-scrollbar {
   width: 14px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   border-radius: 100vw;
   background: transparent;
   margin-block: 0.4em;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   border: 0.21em solid transparent;
   border-radius: 2rem;
